# claude-tools

./: .gitignore  README.md  install.sh
benchmarks/: bench.sh
config/: config.toml.example
docs/superpowers/specs/: 2026-04-22-claude-tools-design.md
impl-rust/: Cargo.toml
impl-rust/src/: cache.rs  config.rs  history.rs  layer1.rs  layer2.rs  lib.rs  main.rs  planner.rs  tokenizer.rs
impl-rust/tests/: integration.rs  layer1.rs  tokenizer.rs
zsh/: claude-tools.zsh
