[package]
name = "claude-tools"
version = "0.1.0"
edition = "2021"
description = "zsh-interactive natural-language wrappers for Unix pipelines"
license = "MIT OR Apache-2.0"

[lib]
name = "claude_tools"
path = "src/lib.rs"

[[bin]]
name = "claude-tools"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shlex = "1.3"
toml = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
